# thurimod

./: .flake8  .gitignore  README.md  alembic.ini  pyproject.toml
migration/: __init__.py  env.py  script.py.mako
migration/versions/: initial_mute_settings_3b5781e3b64f.py  initial_warnings_9a65d456bc11.py
thurimod/: __init__.py  __main__.py  bot.py  config.py  database.py
thurimod/features/: __init__.py
thurimod/features/automod/: __init__.py  events.py  filters.py
thurimod/features/ban_kick/: __init__.py  commands.py
thurimod/features/mutes/: __init__.py  commands.py  models.py
thurimod/features/warnings/: __init__.py  commands.py  models.py
thurimod/utils/: checks.py  config_parse.py
