[tool.poetry]
name = "thurimod"
version = "0.1.0"
description = "Thuri Mod, a Discord mod bot for Thurikyl."
authors = ["Artemis <me@arty.li>"]

[tool.poetry.dependencies]
python = "^3.10"
SQLAlchemy = "^1.4.26"
asyncpg = "^0.24.0"
pydantic = "^1.8.2"
rich = "^10.12.0"
alembic = "^1.7.4"
dslash = "^0.3.3"
nextcord = {git = "https://github.com/nextcord/nextcord"}

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
black = "^21.9b0"
isort = "^5.9.3"
pre-commit = "^2.15.0"
flake8-annotations = "^2.7.0"
flake8-bugbear = "^21.9.2"
flake8-comprehensions = "^3.7.0"
flake8-docstrings = "^1.6.0"
flake8-mutable = "^1.2.0"
flake8-raise = "^0.0.5"
flake8-string-format = "^0.3.0"
flake8-todo = "^0.7"
poethepoet = "^0.11.0b5"

[tool.isort]
profile = "black"
line_length = 100
src_paths = ["thurimod"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.poe]
verbosity = -1

[tool.poe.tasks]
_format = "black . -q"
_format_imports = "isort . -q"
_lint = "flake8 ."
format = ["_format_imports", "_format", "_lint"]
hooks = "pre-commit install"
migration = "alembic"
thurimod = "python -m thurimod"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
